2014-04-07  Martin Reiche  <reiche.stud@googlemail.com>

	* lib/subplotERP.m: Changed running statistics routines.

	* func/plot_erp.m (plot_erp): Changed running statistics routines.

	* config.m: Added linear trend test as option for running
	point-wise statistics of ERPs.

	* lib/runningStat.m: Implemented linear trend test.

	* lib/drawSig.m: Marking of significant intervals is now handled
	in this file. Significant intervals are now marked in
	light red for p-values which are not corrected for multiple
	comparisons and in dark red for tests which have been corrected
	for multiple comparisons.

	* lib/trendtest.m: Newly implemented within-subjects contrast
	test. Added as option for running point-wise statistics to
	operform a linear trend test of the submitted data.

2014-03-03  Martin Reiche  <reiche.stud@googlemail.com>

	* eeg_analysis.m (eeg_analysis): Loading chanlocs from local
	results folder.

	* func/preprocess.m: paths are submitted to func/checkFile.m to
	check whether which cluster mode is active.

	* func/checkFile.m (checkFile): In remote cluster mode, script is
	not paused if trigger timing exceedes expected value.

2014-02-11  Martin Reiche  <reiche.stud@googlemail.com>

	* func/preprocess.m: Job subfolder of results path gets deleted
	after the last subject was preprocessed.

	* func/eeg_rejection.m: Implemented new channel location path.

	* func/save_erp.m: Implemented now channel location path.

	* eeg_analysis.m: In parallel mode an additional subfolder
	indicating the Job ID is now appended to the results path where
	temopral data files are stored throughout the preprocessing.

	* config.m: An additional path for the channel location file is
	now included separately from the results path because this now
	gets modified with an additional job subfolder in parallel mode.

2014-02-10  Martin Reiche  <reiche.stud@googlemail.com>

	* triggerlabels.m (triggerlabels): Added additional argument